# seodo-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  seodo.rb  setup.py
seodo/: main.py
