[tool.poetry]
name = "seodo"
version = "0.0.13"
description = "Seo.do terminal client"
authors = ["Seo Do"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.5"
certifi = "2020.4.5.1"
chardet = "3.0.4"
click = "7.1.1"
future = "0.18.2"
requests = "2.23.0"
tabulate = "0.8.7"
typer = {extras = ["all"], version = "^0.1.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
seodo = 'seodo.main:app'
